--- a/Angular/src/app/komentari/komentari.component.html
+++ b/Angular/src/app/komentari/komentari.component.html
@@ -17,15 +17,23 @@
   <button style="color: green" (click)="lajkaj(x.id)" >↑ {{x.brojLajkova}}</button>
     &nbsp;
     <button style="color: red" (click)="dislajkaj(x.id)">↓ {{x.brojDislajkova}}</button>
-    <button style="color: orange; float: right">Report</button>
+    <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" style="color: orange; float: right">Report</button>
+    <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isAdmin" style="color: red; float: right" (click)="obrisiKomentar(x.id)">Delete</button>
   </div>
 </div>
 <br>
 
 
-<div class="dodavanjeKomentara" style=" border-radius:7px; border-bottom: 1px solid black; border-top: 1px solid black">
-  <textarea id="komentar" [(ngModel)]="sadrzajKomentara" placeholder="Add your comment"></textarea>
-  <button (click)="dodajKomentar()" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none; margin-left: 70%; width: 30%; margin-top: 2%; font-size: 17px">COMMENT</button>
+<div *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" class="dodavanjeKomentara" style=" border-radius:7px; border-bottom: 1px solid black; border-top: 1px solid black">
+  <form [formGroup]="validiraj" (ngSubmit)="dodajKomentar()" class="row g-3" >
+  <textarea id="sadrzaj" formControlName="sadrzaj" placeholder="Add your comment"></textarea>
+    <div style="color:darkred; font-weight: bold" *ngIf="validiraj.controls['sadrzaj'].invalid && (validiraj.controls['sadrzaj'].dirty || validiraj.controls['sadrzaj'].touched)">
+      <div *ngIf="validiraj.controls['sadrzaj'].errors.required">
+        You need to type something in for submit.
+      </div>
+    </div>
+  <button  style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none; margin-left: 70%; width: 30%; margin-top: 2%; font-size: 17px">COMMENT</button>
+  </form>
 </div>
 
 
