--- a/Angular/src/app/story-details/story-details.component.scss
+++ b/Angular/src/app/story-details/story-details.component.scss
@@ -5,7 +5,10 @@ body{
 .previous {
   background-color: #f1f1f1;
   color: black;
+  font-weight: bold;
+  justify-content: center;
   border-radius: 50%;
+  width:5%;
 }
 a {
   text-decoration: none;
