--- a/Angular/src/app/donation/donation.component.html
+++ b/Angular/src/app/donation/donation.component.html
@@ -1,4 +1,4 @@
-
+<button id="nazad" (click)="vratiNazad()">←</button>
 <div *ngFor="let x of pricaPodaci">
   <div  class="kontejner">
     <div *ngIf="validiraj==null" class="donacija">
