--- a/Angular/src/app/donation/donation.component.scss
+++ b/Angular/src/app/donation/donation.component.scss
@@ -7,6 +7,16 @@
 .slika{
   height: 100%;
 }
+#nazad{
+  height:2%;
+  width:10%;
+  font-weight: bold;
+  border:none;
+  background-color:inherit;
+  font-size:40px;
+  color:white;
+  box-shadow: 5px 5px 5px 5px cornflowerblue;
+}
 .donacija{
   background-color: #3D5A80;
   margin-left: 20%;
