--- a/Angular/src/app/komentari/komentari.component.html
+++ b/Angular/src/app/komentari/komentari.component.html
@@ -1,4 +1,7 @@
 
+<button id="nazad" (click)="vratiNazad()">←</button>
+
+
 <div *ngFor="let x of komentariPodaci.komentari" style="border: 2px solid black; margin-top: 2%; margin-bottom: 2%; border-radius: 30px; padding: 2%; background-color: white">
 
   <div class="prvi" style="width: 100%">
