--- a/Angular/src/app/komentari/komentari.component.scss
+++ b/Angular/src/app/komentari/komentari.component.scss
@@ -6,6 +6,36 @@
   border: none;
   background-color: white;
 }
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+  font-weight: bold;
+  justify-content: center;
+  border-radius: 50%;
+  width:7%;
+}
+#nazad{
+  height:2%;
+  width:10%;
+  font-weight: bold;
+  border:none;
+  background-color:inherit;
+  font-size:40px;
+  color:navy;
+  box-shadow: 5px 5px 5px 5px cornflowerblue;
+  margin-bottom:1%;
+  color:blueviolet;
+}
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
 #komentar{
   width: 100%;
   font-size: 20px;
