--- a/Angular/src/app/stories/stories.component.html
+++ b/Angular/src/app/stories/stories.component.html
@@ -2,13 +2,14 @@
 <div *ngIf="odabranaPrica==null" class="kontejner">
 <h1 *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik">Stories opened for donations</h1>
 <h1 *ngIf="informacije().autentifikacijaToken.korisnickinalog.isAdmin">Stories review</h1>
-  <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" type="button" class="btn btn-dark btn-lg" style="width:30%; height:20%; margin:2%; color: white; background-color: #EE6C4D; border: none; border-radius: 30px; margin-left:60% " (click)="novaPrica()" >Add your story</button>
+  <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik && this.brojAktivnih<5" type="button" class="btn btn-dark btn-lg" style="width:30%; height:20%; margin:2%; color: white; background-color: #EE6C4D; border: none; border-radius: 30px; margin-left:60% " (click)="novaPrica()" >Add your story</button>
 <br> <br>
   <div class="dugmad">
   <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" id="prvi" (click)="preuzmiTudje()" style="border: none; border-radius:30px; color: black; background-color: #99C1D9; font-weight: bold; ">Other stories</button>
-  <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" id="drugi" (click)="preuzmiMoje()" style="border: none; border-radius:30px; color: black; background-color: #99C1D9; float: right; font-weight: bold">My stories</button>
+  <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" id="drugi" (click)="preuzmiMojeAktivne()" style="border: none; border-radius:30px; color: black; background-color: #99C1D9; float: right; font-weight: bold">My stories</button>
   </div>
-  <div *ngIf="prica_tudja!=null">
+
+  <div *ngIf="otvoriTudje">
   <div *ngFor="let x of prica_tudja.price" class="kartica">
     <img src="{{getSliku(x)}}" style="max-height:100%; max-width:20%; float:left; margin:3%">
     <h3>{{x.naslov}}</h3>
@@ -18,16 +19,42 @@
   </div>
     </div>
 
-
-  <div *ngIf="prica_moja!=null">
-    <div *ngFor="let x of prica_moja.price" class="kartica">
+<!--<div *ngIf="informacije().autentifikacijaToken.korisnickinalog.isAdmin">
+    <div *ngFor="let x of prica_tudja.price" class="kartica">
       <img src="{{getSliku(x)}}" style="max-height:100%; max-width:20%; float:left; margin:3%">
       <h3>{{x.naslov}}</h3>
       <h4>GOAL {{x.novcani_cilj}} $</h4>
       <a class="btn btn-dark" (click)="openDetails(x)" style="margin-left:85%; margin-bottom: 1%; border-radius: 30px; color: white; background-color: #EE6C4D; border: none;font-size: 20px"> Details</a>
       <hr>
     </div>
+  </div>-->
+
+
+  <div *ngIf="otvoriMoje" style="width: 100%">
+    <div class="aktivne">
+      <button id="aktivnePrice" style="margin-right:1%; border-right:2px solid white; color:white" (click)="preuzmiMojeAktivne()">Active stories</button>
+      <button id="neaktivnePrice" style="color:black" (click)="preuzmiMojeNeaktivne()">Finished stories</button>
+    </div>
+    <div *ngIf="prica_mojaAktivna!=null">
+    <div *ngFor="let x of prica_mojaAktivna" class="kartica">
+      <img src="{{getSliku(x)}}" style="max-height:100%; max-width:20%; float:left; margin:3%">
+      <h3>{{x.naslov}}</h3>
+      <h4>GOAL {{x.novcani_cilj}} $</h4>
+      <a class="btn btn-dark" (click)="openDetails(x)" style="margin-left:85%; margin-bottom: 1%; border-radius: 30px; color: white; background-color: #EE6C4D; border: none;font-size: 20px"> Details</a>
+      <hr>
+    </div>
+    </div>
+    <div *ngIf="prica_mojaNeaktivna!=null">
+    <div *ngFor="let x of prica_mojaNeaktivna" class="kartica">
+      <img src="{{getSliku(x)}}" style="max-height:100%; max-width:20%; float:left; margin:3%">
+      <h3>{{x.naslov}}</h3>
+      <h4>GOAL {{x.novcani_cilj}} $</h4>
+      <a class="btn btn-dark" (click)="openDetails(x)" style="margin-left:85%; margin-bottom: 1%; border-radius: 30px; color: white; background-color: #EE6C4D; border: none;font-size: 20px"> Details</a>
+      <hr>
+    </div>
+      </div>
   </div>
+  
 
 <br> <br>
   <div style="display:inline-block; width:100%; height:100%">
@@ -35,9 +62,10 @@
       <button type="button" class="btn btn-dark btn-lg" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none"
               *ngIf="trenutnaStranica > 1" (click)="prethodnaStranica()">Previous</button>
       <button type="button" class="btn btn-dark btn-lg" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none; float: right"
-              *ngIf="trenutnaStranica < totalPages" (click)="sljedecaStranica()">Next</button>
+              *ngIf="trenutnaStranica < totalPages && totalPages>1" (click)="sljedecaStranica()">Next</button>
     </div>
   </div>
+
 </div>
 
   <div *ngIf="odabranaPrica!=null" class="dodavanjePrice">
@@ -117,3 +145,5 @@
     </form>
   </div>
 
+
+<div *ngIf="brojAktivnih==5" style="color:red;background-color:whitesmoke;width:100%; border:1px solid black; border-radius: 30px; font-weight: bold; font-size:18px; padding:2%">You can not add another story because you already have 5 active ones. Give the others opportunity to participate.</div>
