--- a/Angular/src/app/story-details/story-details.component.scss
+++ b/Angular/src/app/story-details/story-details.component.scss
@@ -2,23 +2,16 @@
 body{
   display: flex;
 }
-.previous {
-  background-color: #f1f1f1;
-  color: black;
-  font-weight: bold;
-  justify-content: center;
-  border-radius: 50%;
-  width:5%;
-}
-a {
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 16px;
-}
 
-a:hover {
-  background-color: #ddd;
-  color: black;
+#nazad{
+  height:2%;
+  width:10%;
+  font-weight: bold;
+  border:none;
+  background-color:inherit;
+  font-size:40px;
+  color:white;
+  box-shadow: 5px 5px 5px 5px cornflowerblue;
 }
 .back{
   background-color: #99C1D9;
@@ -71,6 +64,9 @@ h3{
   color: white;
   margin-left: 70%;
   padding: 2%;
+}
+:root{
+  --sirinaProgressa: var()
 }
 
 
