--- a/Angular/src/app/story-details/story-details.component.scss
+++ b/Angular/src/app/story-details/story-details.component.scss
@@ -65,9 +65,22 @@ h3{
   margin-left: 70%;
   padding: 2%;
 }
-:root{
-  --sirinaProgressa: var()
+
+
+.progress {
+  height: 5%;
+  font-size:20px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
 }
 
+.progress-bar {
+  height: 100%;
+  border-radius: 10px;
+  background-color: #4CAF50;
+  color: #ffffff;
+  text-align: center;
+  font-weight: bold;
+}
 
 
