--- a/Angular/src/app/story-details/story-details.component.html
+++ b/Angular/src/app/story-details/story-details.component.html
@@ -14,14 +14,11 @@
       <h4>We will need <b>{{x.novcaniCilj}}$</b>  to make our story happen.</h4>
       <div class="progress">
         <div class="progress-bar" role="progressbar" [style.width.%]="percentageComplete">
-          {{percentageComplete}}$
+          {{percentageComplete}}%
         </div>
       </div>
       <br>
       <h4>You can find us in <b>{{x.lokacija}}</b></h4>
-      <!--<div *ngIf="informacije().autentifikacijaToken.korisnickinalog.id==x.korisnik_id">
-      <button>NAILA </button>
-      </div>-->
       <img src="https://joomly.net/frontend/web/images/googlemap/map.png" style="height: 50%; width: 100%">
       <br> <br>
 
