--- a/Angular/src/app/story-details/story-details.component.scss
+++ b/Angular/src/app/story-details/story-details.component.scss
@@ -69,18 +69,21 @@ h3{
 
 .progress {
   height: 5%;
-  font-size:20px;
+  font-size:15px;
   background-color: #f0f0f0;
   border-radius: 10px;
+
 }
 
 .progress-bar {
   height: 100%;
   border-radius: 10px;
   background-color: #4CAF50;
-  color: #ffffff;
+  color: black;
   text-align: center;
   font-weight: bold;
+
+
 }
 
 
