--- a/Angular/src/app/donation/donation.component.scss
+++ b/Angular/src/app/donation/donation.component.scss
@@ -4,18 +4,29 @@
   height:100%;
   border-radius: 30px;
 }
+.button-34 {
+  background: #FFFFFF;
+  border-radius: 999px;
+  box-shadow: #4169E1 0 10px 20px -10px;
+  box-sizing: border-box;
+  color: #4169E1;
+  cursor: pointer;
+  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  opacity: 1;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: fit-content;
+  word-break: break-word;
+  border: 0;
+}
 .slika{
   height: 100%;
-}
-#nazad{
-  height:2%;
-  width:10%;
-  font-weight: bold;
-  border:none;
-  background-color:inherit;
-  font-size:40px;
-  color:white;
-  box-shadow: 5px 5px 5px 5px cornflowerblue;
 }
 .donacija{
   background-color: #3D5A80;
