--- a/Angular/src/app/komentari/komentari.component.html
+++ b/Angular/src/app/komentari/komentari.component.html
@@ -1,6 +1,6 @@
 
-<button id="nazad" (click)="vratiNazad()">←</button>
-
+<button class="button-34" style="font-size: 25px" (click)="vratiNazad()">←</button>
+<br>
 
 <div *ngFor="let x of komentariPodaci.komentari" style="border: 2px solid black; margin-top: 2%; margin-bottom: 2%; border-radius: 30px; padding: 2%; background-color: white">
 
