--- a/Angular/src/app/story-details/story-details.component.scss
+++ b/Angular/src/app/story-details/story-details.component.scss
@@ -2,7 +2,11 @@
 body{
   display: flex;
 }
-
+.komentar{
+  height: 100%;
+  width: 100%;
+  margin-top: 0%;
+}
 #nazad{
   height:2%;
   width:10%;
@@ -12,6 +16,27 @@ body{
   font-size:40px;
   color:white;
   box-shadow: 5px 5px 5px 5px cornflowerblue;
+}
+.button-34 {
+  background: #FFFFFF;
+  border-radius: 999px;
+  box-shadow: #4169E1 0 10px 20px -10px;
+  box-sizing: border-box;
+  color: #4169E1;
+  cursor: pointer;
+  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  opacity: 1;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: fit-content;
+  word-break: break-word;
+  border: 0;
 }
 .back{
   background-color: #99C1D9;
@@ -35,6 +60,7 @@ h3{
   color: white;
   font-family: Montserrat;
   max-width: 40%;
+  height: 100%;
   background-color:  rgba(205,205,205,0.5);
   padding: 2%;
   border-radius: 30px;
@@ -47,6 +73,7 @@ h3{
   background-color: rgba(205,205,205,0.5);
   border-radius: 30px;
   max-width: 60%;
+  height: 100%;
   margin-left: 3%;
   padding: 2%;
   margin-bottom: 10%;
@@ -64,6 +91,7 @@ h3{
   color: white;
   margin-left: 70%;
   padding: 2%;
+  width: fit-content;
 }
 
 
