--- a/Angular/src/app/log-in/log-in.component.html
+++ b/Angular/src/app/log-in/log-in.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="LogInForma" (ngSubmit)="onSubmit()">
-  <div class="kontejner">
+  <div class="kontejner" *ngIf="otvoriModal==false && unesiKod==false && promjena==false">
     <div class="slikaPozadina"></div>
     <p style="font-weight: bold; font-size: 50px; color: white"> Log in</p>
   <label>
@@ -21,10 +21,57 @@
 <hr style="color: white">
   <button type="click" class="cta" style="border-radius: 30px; border: none; color: white; background-color: #EE6C4D; width: 80%; margin-left:10%;margin-right: 10% ; font-size: 20px">Log in </button>
   <br><br>
-
+    <button style="font-size: 25px; color: white; background-color: #99C1D9; border: none" id="dugmic" (click)="otvoriModal=true">Forgot your password?</button>
+    <br>
   <a style="font-size: 25px; text-decoration:none; color: white" href="/registration">Dont have an account? Register here!</a>
   </div>
 </form>
+
+<div *ngIf="otvoriModal==true" class="donacija">
+  <div class="gornjiDio">
+    <h5 style="color: white; font-weight: bold">Enter email for verification code</h5>
+    <button type="button" style="color: white; font-weight: bold; background-color: #99C1D9; border: none; margin-left: 75%; font-size: 25px" (click)="otvoriModal=false">X</button>
+  </div>
+
+
+  <div style="margin-left: 20%; margin-right: 20%; width: 60%">
+    <input class="form-control" style="border-radius: 30px" [(ngModel)]="this.mail">
+  </div>
+
+  <button type="button" style="width:40%; height:20%; margin:2%; color: white; background-color: #00CA4C; border: none; border-radius: 30px; margin-left:60% "  (click)="posaljiKod()">Send </button>
+</div>
+
+
+
+<div *ngIf="unesiKod==true" class="donacija">
+  <div class="gornjiDio">
+    <h5 style="color: white; font-weight: bold">Enter code that you received</h5>
+    <button type="button" style="color: white; font-weight: bold; background-color: #99C1D9; border: none; margin-left: 75%; font-size: 25px" (click)="unesiKod=false">X</button>
+  </div>
+
+
+  <div style="margin-left: 20%; margin-right: 20%; width: 60%">
+    <input class="form-control" style="border-radius: 30px" [(ngModel)]="this.verifikacija">
+  </div>
+
+  <button type="button" style="width:40%; height:20%; margin:2%; color: white; background-color: #00CA4C; border: none; border-radius: 30px; margin-left:60% "  (click)="provjeriValidnost()">Submit </button>
+</div>
+
+
+<div *ngIf="promjena==true" class="donacija">
+  <div class="gornjiDio">
+    <h5 style="color: white; font-weight: bold">Change password</h5>
+    <button type="button" style="color: white; font-weight: bold; background-color: #99C1D9; border: none; margin-left: 75%; font-size: 25px" (click)="promjena=false">X</button>
+  </div>
+
+  <div style="margin-left: 20%; margin-right: 20%; width: 60%">
+    <label class="form-label" style="font-weight: bold; color: white">Enter new password</label>
+    <input class="form-control" style="border-radius: 30px" [(ngModel)]="this.noviPassword">
+  </div>
+
+  <button type="button" style="width:40%; height:20%; margin:2%; color: white; background-color: #00CA4C; border: none; border-radius: 30px; margin-left:60% "  (click)="NoviPassword()">Change </button>
+</div>
+
 
 
 
