--- a/Angular/src/app/home/home.component.html
+++ b/Angular/src/app/home/home.component.html
@@ -8,8 +8,9 @@
       <!--<img url="https://images.squarespace-cdn.com/content/v1/5cf81d221fa0100001acb02f/1587601583715-NXXBUKW8ST27K3PJ0EJI/DSC_0432_edit.jpg" style="height: 50%; width: 100%">-->
     </div>
     <div class="detalji">
-      <h4>We will need  to make our story happen.</h4>
+      <h4 style="color: black; font-family: 'Bradley Hand ITC'; font-weight: bold; text-align: center">Share money, love and good energy to help ones who need it.</h4>
 
     </div>
   </div>
+  <button style="width: fit-content; border: 1px solid gray; border-radius: 30px; background-color: black; color: white; font-size: 30px; margin-top: 2%; margin-left: 35%; padding: 1%" (click)="logirajse()">  Login here!  </button>
 </div>
