--- a/Angular/src/app/story-details/story-details.component.html
+++ b/Angular/src/app/story-details/story-details.component.html
@@ -8,7 +8,8 @@
     <div class="pomjeri">
     <div class="opis">
       <img src="{{getSliku(x.id)}}" style="height: 50%; width: 100%">
-      <p>{{x.opis}}</p>
+      <h4 style="text-align: center; margin-top:2%; font-weight: bold">Description:</h4>
+      <p style="width: 100%">{{x.opis}}</p>
     </div>
     <div class="detalji">
       <h4>We will need <b>{{x.novcaniCilj}}$</b>  to make our story happen.</h4>
