--- a/Angular/src/assets/fit-messagebox.css
+++ b/Angular/src/assets/fit-messagebox.css
@@ -8,10 +8,10 @@
 
 .porukaInfo{
 	color: #0c5460;
-	background-color: #d1ecf1;
+	background-color: #e6cd10;
 	padding: .75rem 1.25rem;
 	margin-bottom: 1rem;
-	border: 1px solid  #bee5eb;
+	border: 1px solid  #e6cd10;
 	border-radius: .25rem;
 	transition: 1s;
 }
